# rrc

./: .gitignore  Cargo.toml  README.md  Rakuten_API_Limits.md  rust-toolchain.toml  typos.toml
.github/workflows/: rust.yml
client/: Cargo.toml  IDEAS.md  OBJECTIVES.md  README.md  ROADMAP.md  TODO.md
lib/: Cargo.toml  IDEAS.md  OBJECTIVES.md  README.md  ROADMAP.md  TODO.md  typos.toml
lib/src/: advert.rs  client.rs  config.rs  constants.rs  customer.rs  export.rs  import.rs  lib.rs  order.rs  product.rs  sales.rs  seller.rs
