[package]
name = "rrc-cli"
version = "0.1.0"
edition = "2024"
authors = ["cyrix126 <cyrix126@baermail.fr>"]
description = "Rust Rakuten Client CLI"
documentation = "https://github.com/cyrix126/rrc"

[[bin]]
name = "update_price_global"
path = "src/bin/update_price_global.rs"

[dependencies]
rrc-lib = {path = "../lib"}
clap = {version="4.5", features=["derive"]}
confy = "0.6"
serde = { version = "1", default-features = false, features = ["serde_derive"]}
reqwest = {version = "0.12"}
get_pass = {git="https://github.com/Cyrix126/get_pass"}
